4.18.2 (unreleased)
-------------------

- Fix bug, improve error reporting in annotate batch client.
- Remove errant print statement.


4.18.1 (2023-07-09)
-------------------

- Build Updates:
  - Fix coverage report generation in GitLab build
  - Created GitHub Actions build
  - Switched to Python 3.8 as minimal version
- Fixed CommunicationReader to skip directories in zip archives


4.18.0 (2023-07-09)
-------------------

- Updated to Concrete schema 4.18, which adds
  AnnotateCommunicationBatchService


4.17.0 (2023-02-06)
-------------------

- Update to Concrete schema 4.17, which adds convert package with
  ConvertCommunicationService, property package with Property type
  abstracted from situations, and id, canonical name, and property list
  fields to situation and entity types
- Fix stale build


4.15.2 (2023-01-19)
-------------------

- Update Thrift to 0.16
- Fixed incompatibility with Python 3.8 caused by use of deprecated
  name for Python standard library class
- Add support for Python 3.10
- Drop support for Python 3.5, 3.6


4.15.1 (2019-05-19)
-------------------

- Fixed bug where `concrete.context` code was not included in 4.15.0
  release


4.15.0 (2019-05-19)
-------------------

- Updated to Concrete schema 4.15, which adds `Context` structure and
  `AnnotateWithContextService` service.  `Context`s are intended to be
  used to convey additional information alongside a `Communication` to
  be annotated.

- Dropped support for Python 2.7

- Added `add_references` flag to CommunicationContainer classes

- Added shell script `install-mojave-homebrew-accelerated-thrift.sh`
  for installing accelerated Thrift on macOS using the Homebrew
  package manager.


4.14.1 (2019-02-28)
-------------------

- Added `scripts/comms2csv.py` and `scripts/csv2comms.py` script for
  converting Communication archives to/from a CSV file of TJSONProtocol
  encoded Communications

- Updated Thrift dependency from 0.10.0 to 0.11.0
