@@ -1,17 +1,8 @@
-# Build 'accelerated' concrete-python with C bindings for Python Thrift
-FROM python:3.8-bullseye
-
-RUN curl -O http://archive.apache.org/dist/thrift/0.16.0/thrift-0.16.0.tar.gz && \
-    tar xvfz thrift-0.16.0.tar.gz && \
-    cd thrift-0.16.0 && \
-    ./configure --with-python  && \
-    make && \
-    make install
+FROM ccmaymay/concrete-python-base
 
 RUN pip install 'tox>=4'
 
 ADD . /opt/concrete-python
 WORKDIR /opt/concrete-python
-RUN python setup.py install
-
-RUN thrift-is-accelerated.py
+RUN pip install . && \
+    thrift-is-accelerated.py
